# dotdev

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
docs/: git.md  index.md  mac.md  macos.md
git/: index.html
macos/: index.html
search/: search_index.json
