[project]
name = "dotdev"
description = "DotDev"
dynamic = ["version"]
requires-python = ">=3.14"
readme = "README.md"

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
]

[project.urls]
"Homepage" = "https://wnowicki.dev"
"Source" = "https://github.com/wnowicki/dotdev"
